automation/logs/content-generation.log
file:///Users/miami2/Documents/GitHub/bolt.new.zion.app/automation/independent-automation-system.js:634
      const commitMessage = \`feat: auto-generate content and features - \${new Date().toISOString()}\`;
                            ^

SyntaxError: Invalid or unexpected token
    at compileSourceTextModule (node:internal/modules/esm/utils:344:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:105:18)
    at #translate (node:internal/modules/esm/loader:534:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:581:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:116:19)

Node.js v22.16.0
[2025-08-01T01:24:54.133Z] Content generation started at: 2025-08-01T01:24:54.132Z
[2025-08-01T01:24:54.134Z] Initial content statistics: {"totalFiles":0,"marketplaceFiles":0,"blogFiles":0,"productFiles":0,"lastGenerated":null}
[2025-08-01T01:24:54.155Z] Final content statistics: {"totalFiles":9,"marketplaceFiles":4,"blogFiles":8,"productFiles":3,"lastGenerated":"2025-08-01T01:24:54.153Z"}
[2025-08-01T01:24:54.155Z] Content generation completed successfully!
[2025-08-01T01:24:54.155Z] Total generated: 7
[2025-08-01T01:24:54.155Z] Marketplace content: 4
[2025-08-01T01:24:54.155Z] Blog content: 0
[2025-08-01T01:24:54.156Z] Product content: 3
[2025-08-01T01:24:54.157Z] Content generation completed at: 2025-08-01T01:24:54.157Z
[2025-08-01T01:24:54.158Z] Total duration: 25ms
[2025-08-01T01:25:44.856Z] Category blog generation completed successfully
[2025-08-01T01:25:54.904Z] Content generation started at: 2025-08-01T01:25:54.902Z
[2025-08-01T01:25:54.909Z] Initial content statistics: {"totalFiles":19,"marketplaceFiles":4,"blogFiles":17,"productFiles":3,"lastGenerated":"2025-08-01T01:25:44.856Z"}
[2025-08-01T01:25:54.929Z] Final content statistics: {"totalFiles":19,"marketplaceFiles":4,"blogFiles":17,"productFiles":3,"lastGenerated":"2025-08-01T01:25:54.927Z"}
[2025-08-01T01:25:54.929Z] Content generation completed successfully!
[2025-08-01T01:25:54.929Z] Total generated: 16
[2025-08-01T01:25:54.929Z] Marketplace content: 4
[2025-08-01T01:25:54.929Z] Blog content: 9
[2025-08-01T01:25:54.930Z] Product content: 3
[2025-08-01T01:25:54.932Z] Content generation completed at: 2025-08-01T01:25:54.932Z
[2025-08-01T01:25:54.932Z] Total duration: 30ms
